﻿- reworked the admin page so that the order of the attributes in the metadata table that we have in the beslutsunderlag. - signal to delete old files was made on the basis on the name of the file instead of the path - added verbose text to two model attributes - added a css attribute for centering a div in a row - added a container-fluid to kodverk.html template - fixed the full metadata view. Added two additional header-buttons so the kodverk metadata column is visibly demarcated from the kodtext

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -81,6 +81,15 @@ nav {
       color: black;
       border-radius: 4px;
     }
+
+    .col-centered {
+      display:inline-block;
+      float:none;
+      /* reset the text-align */
+      text-align:left;
+      /* inline-block space fix */
+      margin-right:-4px;
+      }
   
   
   .text-warning-light{
